// Vitest Snapshot v1

exports[`error to object/json 1`] = `
{
  "args": [
    "http://www.skarab42.dev",
    {
      "isAdmin": true,
      "name": "skarab42",
    },
  ],
  "cause": undefined,
  "data": {
    "message": "Page Not Found: http://www.skarab42.dev",
    "request": {
      "url": "http://www.skarab42.dev",
      "user": {
        "isAdmin": true,
        "name": "skarab42",
      },
    },
  },
  "stack": StringMatching /\\^PojoError: Page Not Found: http:\\\\/\\\\/www\\\\\\.skarab42\\\\\\.dev/,
  "type": "PAGE_NOT_FOUND",
}
`;

exports[`error with cause to object 1`] = `
{
  "args": Any<Array>,
  "cause": {
    "args": Any<Array>,
    "cause": {
      "args": Any<Array>,
      "cause": {
        "args": Any<Array>,
        "cause": undefined,
        "data": Any<Object>,
        "stack": StringMatching /\\^Error: Native Error!!!/,
        "type": Any<String>,
      },
      "data": Any<Object>,
      "stack": StringMatching /\\^PojoError: Fatal error/,
      "type": Any<String>,
    },
    "data": Any<Object>,
    "stack": StringMatching /\\^PojoError: Page Not Found/,
    "type": Any<String>,
  },
  "data": Any<Object>,
  "stack": StringMatching /\\^PojoError: Danger !!!/,
  "type": Any<String>,
}
`;

exports[`error with two parameter (url, undefined) 1`] = `
{
  "message": "Page Not Found: http://www.skarab42.dev",
  "request": {
    "url": "http://www.skarab42.dev",
    "user": undefined,
  },
}
`;

exports[`error with two parameters (url, user) 1`] = `
{
  "message": "Page Not Found: http://www.skarab42.dev",
  "request": {
    "url": "http://www.skarab42.dev",
    "user": {
      "isAdmin": true,
      "name": "skarab42",
    },
  },
}
`;
